# debt-tracer

./: .env  Cargo.toml
.github/workflows/: general.yml
.sqlx/: query-2ed52c8c9f5cca270952974a63676b060841e1fa00860a7cd975c18b52a3dba6.json  query-35d566b87f42051827e2abae39a1d0bf36581dd80b0f9e1ccca38e55efae11fb.json  query-3e7edc9646780132bd68165a23c556b39c88adea1edbbc111801e4ff96454bdf.json  query-8ebee042e237b21ebc731fe50189c571d94fb32ef5ad503060cc260df4b3d4d0.json  query-9def59a54c81cda98d69e98118f5cb912289e383a771aed258efd7f3d0045adc.json  query-fb79bfd7acb39f0be6883eed6eeb6a38a032bc0b679bc77eb4443a9ecadd03be.json
configuration/: base.yaml
migrations/: 20240303104551_create_users_table.sql  20240304143607_create_debts_table.sql  20240527005153_rename_password_column.sql  20240604005030_seed_user.sql  20240626122539_add_status_to_debts.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  debt.rs  debts.rs  lib.rs  main.rs  session_state.rs  startup.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: debt_amount.rs  debt_currency.rs  debt_description.rs  mod.rs  new_debt.rs  new_user.rs
src/domain/new_debt/: debt_amount.rs  debt_currency.rs  debt_status.rs  debt_user_id.rs  mod.rs
src/routes/: mod.rs
src/routes/login/: mod.rs  post.rs
src/routes/signup/: post.rs
src/routes/users/: get.rs
tests/: health_check.rs
tests/api/: debts.rs  health_check.rs  helpers.rs  login.rs  main.rs
