[package]
name = "debt-tracer"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "debt-tracer"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
serde = { version = "1", features = ["derive"]}
serde-aux = "4"
config = "0.13"
secrecy = { version = "0.8", features = ["serde"] }
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
bigdecimal = { version = "0.3.1", features = ["serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
once_cell = "1"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
    "bigdecimal",
]

[dev-dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json"]

